--- a/src/main/resources/templates/crowdFundingRegistration.html
+++ b/src/main/resources/templates/crowdFundingRegistration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<%@ page contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
+<meta charset="utf-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 <title>펀딩 등록 요청</title>
 </head>
@@ -13,7 +13,7 @@
       <p>등록 요청이 완료되었습니다.</p>
     </div>
     <div class="col">
-    	<a href="" th:href="@{}" class="btn btn-primary">마이페이지로 가기</a><br><br>
+    	<a href="" th:href="@{/myAccount}" class="btn btn-primary">마이페이지로 가기</a><br><br>
     </div>
     <hr>
   </div>
