[Update] 펀딩 상세 화면 조회

--- a/src/main/resources/templates/crowdFundingListView.html
+++ b/src/main/resources/templates/crowdFundingListView.html
@@ -34,7 +34,7 @@
 			<li th:text="'창작자 : ' + ${crowdFundingItem.item.account.userId}">창작자</li> 
 			<li th:text="'제목 : ' + ${crowdFundingItem.item.title}">제목</li>
 			<li th:text="((${crowdFundingItem.currentSponsoredAmount} / ${crowdFundingItem.targetAmount}) * 100) + '% 달성'">~% 달성</li>
-			<li><a href="" th:href="@{/crowdFunding/item(itemid=${crowdFundingItem.item.itemId})}" class="btn btn-primary">상세 정보 보기</a></li>
+			<li><a href="" th:href="@{/crowdFunding/item(crowdFundingId=${crowdFundingItem.crowdFundingId})}" class="btn btn-primary">상세 정보 보기</a></li>
 			<br>
 			<br>
 		</ul>
