--- a/src/main/resources/templates/myAccountView.html
+++ b/src/main/resources/templates/myAccountView.html
@@ -10,9 +10,10 @@
 			수정하기</a>
 	</div>
 	<div align="center">
-		<a href="" th:href="@{/sellerPage}">판매내역</a> <a href="" th:href="@{}">구매내역</a>
-		<a href="" th:href="@{}">나의 크라우드펀딩</a> <a href="" th:href="@{}">경매
-			내역</a>
+		<a href="" th:href="@{/sellerPage}">판매내역</a> 
+		<!-- <a href="" th:href="@{}">구매내역</a> -->
+		<a href="" th:href="@{}">나의 크라우드펀딩</a> 
+		<!-- <a href="" th:href="@{}">경매내역</a> -->
 	</div>
 	<div align="center">
 		<table>
