--- a/src/main/resources/templates/crowdFundingRegiHistory.html
+++ b/src/main/resources/templates/crowdFundingRegiHistory.html
@@ -9,12 +9,13 @@
 <br><h1 align="center">펀딩 등록 내역</h1><br>
 <table th:unless="${#lists.isEmpty()}">
 	<tr>
-		<th>이미지</th><th>펀딩 간단 설명</th>
+		<th>이미지</th>
+		<th>펀딩 간단 설명</th>
 	</tr>
-	<!-- <tr th:each=" : ${}">
-		<td th:text="${}">이미지</td>
-		<td th:text="${}">펀딩 간단 설명</td>
-	</tr> -->
+	<tr th:each="crowdFundingItem : ${addCrowdFundingItem}">
+		<td th:text="${crowdFundongItem.item.img}">이미지</td>
+		<td th:text="${crowdFundongItem.shortInfo}">펀딩 간단 설명</td>
+	</tr> 
 </table>
 </body>
 </html>
