--- a/src/main/resources/templates/crowdFundingRegiHistory.html
+++ b/src/main/resources/templates/crowdFundingRegiHistory.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <br><h1 align="center">펀딩 등록 내역</h1><br>
-<table th:unless="${#lists.isEmpty()}">
+<table th:unless="${#lists.isEmpty(myCrowdFundingItemList)}">
 	<tr>
 		<th>이미지</th>
 		<th>펀딩 간단 설명</th>
 	</tr>
-	<tr th:each="crowdFundingItem : ${addCrowdFundingItem}">
-		<td th:text="${crowdFundongItem.item.img}">이미지</td>
-		<td th:text="${crowdFundongItem.shortInfo}">펀딩 간단 설명</td>
+	<tr th:each="crowdFundingItem : ${myCrowdFundingItemList}">
+		<td th:text="${crowdFundingItem.item.img}">이미지</td>
+		<td th:text="${crowdFundingItem.shortInfo}">펀딩 간단 설명</td>
 	</tr> 
 </table>
 </body>
