[UPDATE] 로그인 세션 관련 수정
로그인 성공시 세션에 Account 객체도 저장하도록 수정, 로그아웃시 세션 비활성화 하는 코드 수정, 세션 체크용 코드 추가

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -14,6 +14,8 @@
 				<a th:if="${session.loginCheck != null}" th:href="@{/logout}">logout</a>
 				<a th:if="${session.loginCheck != null}" th:href="@{/cart}">cart</a>
 				<a th:if="${session.loginCheck != null}" th:href="@{/mypage}">mypage</a>
+				<!-- 세션 확인용 
+				<a th:if="${session.loginCheck != null}" th:href="@{/sessionCheck}">checkSession</a> -->
 			</td>
 		</tr>
 		<tr>
