--- a/src/main/resources/templates/thyme/JoinForm.html
+++ b/src/main/resources/templates/thyme/JoinForm.html
@@ -15,12 +15,12 @@
 
 <h2>회원가입</h2>
 <div layout:fragment="content">
-	<form th:action="@{/join}" th:object="${account}" method="post">
+	<form th:action="@{/join.do}" th:object="${account}" method="post">
 		<table border=1>
 			<tr>
 				<td>id</td>
 				<td>
-					<input type="text" id="id" th:field="*{id}" />
+					<input type="text" id="userid" th:field="*{userid}" />
 				</td>
 			</tr>
 			<tr>
@@ -50,13 +50,13 @@
 			<tr>
 				<td>address</td>
 				<td>
-					<input type="text" id="address" th:field="*{address}" >
+					<input type="text" id="addr" th:field="*{addr}" >
 				</td>
 			</tr>
 			<tr>
 				<td>favorite category</td>
 				<td>
-					<input type="text" id="favCategory" th:field="*{favCategory}" >
+					<input type="text" id="favcategory" th:field="*{favcategory}" >
 				</td>
 			</tr>
 		</table>
