--- a/src/main/resources/templates/thyme/LoginForm.html
+++ b/src/main/resources/templates/thyme/LoginForm.html
@@ -15,12 +15,12 @@
 
 <h2>로그인</h2>
 <div layout:fragment="content">
-	<form th:action="@{/login}" th:object="${account}" method="post">
+	<form th:action="@{/login.do}" th:object="${account}" method="post">
 		<table border=1>
 			<tr>
 				<td>id</td>
 				<td>
-					<input type="text" id="id" th:field="*{id}" />
+					<input type="text" id="userid" th:field="*{userid}" />
 				</td>
 			</tr>
 			<tr>
