[UPDATE] 홈 관련 업데이트
경매에 대해 홈에 물건들 4개씩 출력되게 하고 카테고리 클릭시 목록 페이지로 연결되도록 함(crowdFunding은 오류남),

AuctionItemListView.html에 thymeleaf layout을 적용시키기 위해서 일부 수정함.(부트스트랩 링크는
default_layout.html의 <head> 밑으로 옮겼음),

CrowdFunding, Auction에 대해 물건 4개씩 가져오는 getFour~ItemList() 메소드 추가함

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -2,7 +2,7 @@
       xmlns:th="http://www.thymeleaf.org">
       
 <!-- headerFragment 선언-->
-<div th:fragment="headerFragment">
+<div align="center" th:fragment="headerFragment">
    <table>
 		<tr>
 			<td style="text-align:left">
@@ -23,7 +23,7 @@
 			<td>
 				<a href="" th:href="@{/personalDeal/list}">PersonalDeal</a>
 				&nbsp&nbsp<img border="0" src="/images/separator.gif" />&nbsp&nbsp
-				<a href="" th:href="@{/auction/list}">Auction</a>
+				<a href="" th:href="@{/auction/recently}">Auction</a>
 				&nbsp&nbsp<img border="0" src="/images/separator.gif"/>&nbsp&nbsp
 				<a href="" th:href="@{/crowdFunding/list}">CrowdFunding</a>
 			</td>
