--- a/src/main/resources/templates/layout/default_layout.html
+++ b/src/main/resources/templates/layout/default_layout.html
@@ -8,9 +8,10 @@
        
 	<!-- config fragment 사용 -->
 	<th:block th:replace="fragment/config :: configFragment" ></th:block>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 </head>
    
-<body>
+<body align="center">
 	<!-- header fragment 사용 -->
 	<th:block th:replace="fragment/header :: headerFragment"></th:block>
        
