--- a/src/main/resources/templates/thyme/AuctionItemListView.html
+++ b/src/main/resources/templates/thyme/AuctionItemListView.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="utf-8">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-<title>경매 물품 목록</title>
-</head>
-<body align="center">
-<br><h1 align="center">경매 물품 목록</h1><br>
-<a href="#" th:href="@{/auction/recently}">신규 경매순</a>&nbsp;
-<a href="#" th:href="@{/auction/mostViews}">조회순</a>&nbsp;
-<a href="#" th:href="@{/auction/mostBids}">입찰순</a>&nbsp;
-<a href="#" th:href="@{/auction/deadline}">마감 임박순</a>
-<br>
-<form name="form" method="POST" th:action="@{/auction/search/}"> 
-	<input type="text" name="word" class="form-control">
-	<input type="submit" value="검색" class="form-control btn btn-success">
-</form>
-<hr>
-<div th:unless="${#lists.isEmpty(auctionItems)}">
-	<ul th:each="auctionItem : ${auctionItems}">
-		<li><img th:src="@{'/upload/' + ${auctionItem.img}}" width="600" height="400"/></li>
-		<li th:text="${auctionItem.title}"></li>
-		<li th:text="'현재 입찰가: '+${auctionItem.currentPrice}+'원'"></li>
-		<li th:text="'입찰수: '+${auctionItem.bidNum}"></li>
-		<li th:text="'조회수: '+${auctionItem.views}"></li>
-		<li th:text="'시작일: '+${auctionItem.startDate}"></li>
-		<li th:text="'마감일: '+${auctionItem.endDate}"></li>
-		<a href="#" th:href="@{/auction/{auctionId}(auctionId=${auctionItem.auctionId})}" class="btn btn-primary">상세 정보 보기</a><br><br>
-	</ul>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default_layout">
+
+<!-- index.html 고유 CSS 추가 -->
+<th:block layout:fragment="css">
+	<link rel="stylesheet" th:href="@{/css/page/home.css}" >
+</th:block>
+    
+<!-- index.html 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+	<script th:src="@{/js/page/home.js}"></script>
+</th:block>
+
+<div layout:fragment="content">
+	<br><h1 align="center">경매 물품 목록</h1><br>
+	<a href="#" th:href="@{/auction/recently}">신규 경매순</a>&nbsp;
+	<a href="#" th:href="@{/auction/mostViews}">조회순</a>&nbsp;
+	<a href="#" th:href="@{/auction/mostBids}">입찰순</a>&nbsp;
+	<a href="#" th:href="@{/auction/deadline}">마감 임박순</a>
+	<br>
+	<form name="form" method="POST" th:action="@{/auction/search/}"> 
+		<input type="text" name="word" class="form-control">
+		<input type="submit" value="검색" class="form-control btn btn-success">
+	</form>
+	<hr>
+	<div th:unless="${#lists.isEmpty(auctionItems)}">
+		<ul th:each="auctionItem : ${auctionItems}">
+			<li><img th:src="@{'/upload/' + ${auctionItem.img}}" width="600" height="400"/></li>
+			<li th:text="${auctionItem.title}"></li>
+			<li th:text="'현재 입찰가: '+${auctionItem.currentPrice}+'원'"></li>
+			<li th:text="'입찰수: '+${auctionItem.bidNum}"></li>
+			<li th:text="'조회수: '+${auctionItem.views}"></li>
+			<li th:text="'시작일: '+${auctionItem.startDate}"></li>
+			<li th:text="'마감일: '+${auctionItem.endDate}"></li>
+			<a href="#" th:href="@{/auction/{auctionId}(auctionId=${auctionItem.auctionId})}" class="btn btn-primary">상세 정보 보기</a><br><br>
+		</ul>
+	</div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-</body>
 </html>
