--- a/src/main/resources/templates/thyme/AuctionHistory.html
+++ b/src/main/resources/templates/thyme/AuctionHistory.html
@@ -4,6 +4,14 @@
 <meta charset="utf-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 <title>경매 내역</title>
+<script>
+function giveup() {
+	return confirm("정말 포기하시겠습니까?");		
+}
+function secondWin() {
+	return confirm("후순위자를 낙찰하시겠습니까?");		
+}
+</script>
 </head>
 <body align="center">
 <br><h1 align="center">경매 내역</h1><br>
@@ -18,6 +26,7 @@
 			<p>입찰수: <span th:text="${sellingAuctionItem.bidNum}"></span></p>
 			<p>시작일: <span th:text="${sellingAuctionItem.startDate}"></span></p>
 			<p>마감일: <span th:text="${sellingAuctionItem.endDate}"></span></p>
+			<a th:if="${sellingAuctionItem.status.toString().equals('낙찰포기')}" class="btn btn-warning btn-md" th:href="@{/auction/bidding/{auctionId}/second(auctionId=${sellingAuctionItem.auctionId})}" onclick="return secondWin();">후순위자 낙찰</a><br><br>
 			<a href="#" th:href="@{/auction/{auctionId}(auctionId=${sellingAuctionItem.auctionId})}" class="btn btn-primary">상세 정보 보기</a><br><br>
 		</div>
 	</div>
@@ -48,6 +57,7 @@
 			<p>입찰수: <span th:text="${auctionedItem.bidNum}"></span></p>
 			<p>시작일: <span th:text="${auctionedItem.startDate}"></span></p>
 			<p>마감일: <span th:text="${auctionedItem.endDate}"></span></p>
+			<a th:unless="${auctionedItem.status.toString().equals('결제완료')}" class="btn btn-warning btn-md" th:href="@{/auction/bidding/{auctionId}/giveup(auctionId=${auctionedItem.auctionId})}" onclick="return giveup();">낙찰 포기</a><br><br>
 			<a href="#" th:href="@{/auction/{auctionId}(auctionId=${auctionedItem.auctionId})}" class="btn btn-primary">상세 정보 보기</a><br><br>
 		</div>
 	</div>
