--- a/src/main/resources/templates/thyme/AuctionItemView.html
+++ b/src/main/resources/templates/thyme/AuctionItemView.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 <title>경매 물품 정보</title>
 <script>
 function remove() {
@@ -14,6 +14,12 @@ function bid() {
 function immd() {
 	return confirm("정말 즉시 구매하시겠습니까?");		
 }
+function cart() {
+	return confirm("장바구니에 넣으시겠습니까?");		
+}
+</script>
+<script th:if="${alreadyAdded}">
+    alert('이미 추가된 물품입니다');
 </script>
 </head>
 <body align="center">
@@ -21,6 +27,7 @@ function immd() {
 	<p>조회수: <span th:text="${auctionItem.item.views}"></span></p>
 	<p>경매 물품 번호: <span th:text="${auctionItem.auctionId}"></span></p>
 	<p>판매자 ID: <span th:text="${auctionItem.item.userId}"></span></p>
+	<p>카테고리: <span th:text="${parentCatId} + '>' + ${childCatId}"></span></p>
 	<p>상태: <span th:text="${auctionItem.status}"></span></p>
 	<p>제목: <span th:text="${auctionItem.item.title}"></span></p>
 	<p rowspan="7"><img th:src="@{'/upload/' + ${auctionItem.item.img}}"/></p>
@@ -47,9 +54,8 @@ function immd() {
 		</form>
 	</div>	
 	<a href="#" th:href="@{/auction/recently}">경매 아이템 목록</a>&nbsp;
-	<a href='<c:url value="/shop/addItemToCart.do">
-		<c:param name="itemId" value="${item.itemId}"/></c:url>'>장바구니 넣기</a>&nbsp;	
-	<a th:if="${auctionItem.status} == '경매대기중'" href="#" th:href="@{/auction/update/{auctionId}(auctionId=${auctionItem.auctionId})}">수정하기</a>&nbsp;
+	<a href="#" th:href="@{/auction/addItemToCart.do(auctionId=${auctionItem.auctionId}, itemId=${auctionItem.itemId}, img=${auctionItem.item.img})}" onclick="return cart();">장바구니 넣기</a>&nbsp;	
+	<a th:if="${auctionItem.status} == '경매대기중'" href="#" th:href="@{/auction/update/(auctionId=${auctionItem.auctionId})}">수정하기</a>&nbsp;
 	<a href="#" th:href="@{/auction/remove/{auctionId}(auctionId=${auctionItem.auctionId}, itemId=${auctionItem.itemId}, img=${auctionItem.item.img})}" onclick="return remove();">삭제하기</a>&nbsp;	
 	<div class="accordion" id="accordionPanelsStayOpenExample">
 	  <div class="accordion-item">
