--- a/src/main/resources/templates/thyme/crowdFundingView.html
+++ b/src/main/resources/templates/thyme/crowdFundingView.html
@@ -6,8 +6,11 @@
 <title>펀딩 상세 화면</title>
 </head>
 <body>
-<br><h1 align="center">펀딩 아이템 상세 화면</h1><br>
+
+<header th:include="fragment/header :: headerFragment"></header>
+
 <div class="container">
+<br><h1 align="center">펀딩 아이템 상세 화면</h1><br>
   <div class="row">
   	<hr>
     <h1>펀딩 제목: <span th:text="${crowdFundingItem.item.title}"></span></h1>
@@ -21,16 +24,18 @@
       <p>마감일: <span th:text="${crowdFundingItem.closingDate}"></span></p>
       <p>후원자 인원: <span th:text="${crowdFundingItem.numberOfSponsor}"></span></p>
       <p>프로젝트 간단 요약 내용: <span th:text="${crowdFundingItem.shortInfo}"></span></p>
-      <form action="" th:action="@{/crowdFunding/fund/{crowdFundingId}(crowdFundingId=${crowdFundingItem.crowdFundingId})}" method="get">
+      <form action="" th:action="@{/crowdFunding/fund/} + ${crowdFundingItem.crowdFundingId}" method="get">
       	<input type="submit"  class="btn btn-primary btn-lg" value="펀딩하기" >
       </form>
       <br><br>
     </div>
     <hr>
-    <!-- <div class="row">
-    <p>펀딩 상세 내용: <span th:text="${crowdFundingItem.detailInfo}"></span></p>
-  </div> -->
+    <p>펀딩 상세 내용:</p>
+    <p><span th:text="${crowdFundingItem.item.description}"></span></p>
   </div>
 </div>
+
+<footer th:include="fragment/footer :: footerFragment"></footer>
+
 </body>
 </html>
