[UPDATE] JoinForm.html에서 form action .do 뺀걸로 수정

--- a/src/main/resources/templates/thyme/JoinForm.html
+++ b/src/main/resources/templates/thyme/JoinForm.html
@@ -15,7 +15,7 @@
 
 <h2>회원가입</h2>
 <div layout:fragment="content">
-	<form th:action="@{/join.do}" th:object="${account}" method="post">
+	<form th:action="@{/join}" th:object="${account}" method="post">
 		<table border=1>
 			<tr>
 				<td>id</td>
